styles/_index.scss
// Index -----------

.cover.cover-orange {
  background-image: linear-gradient(45deg, rgb(131, 130, 127), rgb(105, 103, 102));
}

.flipper {
  height: 100%;
  transition: 1s;
  transform-style: preserve-3d;
  position: relative;
}

.flipper.isFlipping {
  transform: rotateY(-180deg);
}

.front, .back {
  width: 100%;
  height: 100%;
 // had to set these to pixel value
 // so the image would not get cut off
  // width: 100%;
  // height: 530px;
  backface-visibility: hidden;
  position: absolute;
  top: 0;
  left: 0;
}

.front {
  transform: rotateY(0deg);
  z-index: 9999;
}

.back {
  transform: rotateY(180deg);
}




.cover {
    background-image: linear-gradient(45deg, #2c3e50 0%, #8f94fb 100%);
    overflow: hidden;
    position: relative;
  }

  .wrapper {
    min-height: 100vh;
    min-width: 100vw;
    margin-top: 0;
    position: relative;
  }

  .main-section {
    top: 150px;
    width: 100%;
    padding: 150px 0 0;
  }

  .hero-section{
    width: 440px;
    height: 530px;
    margin-bottom: 30px;
    h2 {
      color: white;
      font-weight: bold;
      margin-bottom: 10px;
    }

    perspective: 1000px;
    color: white;
    position: relative;

    &-content {
      position: absolute;
      bottom: 0;
      width: 100%;
      padding: 20px;
      z-index: 1;

      &-intro {
        font-size: 17px;
      }
    }
  }


  .image {
    // width: 440px;
    // height: 530px;
    width: 100%;
    height: 100%;
    background-repeat: no-repat;
    background-position: center;
  }

  .image-1 {
    background-image: url('/images/images-01.jpg');
  }

  .image-2 {
    background-image: url('/images/images-02.jpg');
  }



  .hero-welcome-text > h1 {
    color: white;
    text-transform: uppercase;
    font-size: 32px;
    margin-top: 80px;
  }

  .hero-welcome-bio {
    margin-top: 20px;
    color: white;

    .fa-stack {
      font-size: 28px;
    }

    .list-inline-item {
      > a {
        color: #373737;
      }
    }
  }

  .hero-welcome-bio > h1 {
   font-size: 1.80rem;
  }

  .hero-welcome-wrapper {
    justify-content: flex-end;

  }

  @media (max-width: 850px) {
    .hero-section {
      margin-left: 0;
      margin-right: 0;
    }

  }

  // @media (max-width: 500px) {
  //   .hero-section {
  //     display: none;
  //   }
  // }

  @media (max-width: 992px) {
    .hero-section {
      width: 330px;

      &-content {
        width: 330px;
      }
    }

    .hero-welcome-text > h1 {
      margin-top: 0px;
    }
  }

  .background-image {
    position: absolute;
    width: 1762px;
    height: 493px;
  }

  .shadow-custom {
    width: 100%;
    height: 100%;
    position: absolute;
    top: 0;
    box-shadow: -17px 13px 41px rgba(13,78,158,0.6);
    border: 2px solid #d9c9f8;

    .shadow-inner {
      width: 100%;
      height: 100%;
      box-shadow: -17px 13px 13px rgba(0,0,0,0.09);
    }
  }

  .shadow-custom-orange {
    box-shadow: -17px 13px 41px rgba(13,78,158,0.3);
    order: 2px solid #d9c9f8;
  }

